[gd_scene load_steps=5 format=3 uid="uid://bajte0ibhll8v"]

[ext_resource type="Script" path="res://Scenes/gui.gd" id="1_hntvv"]
[ext_resource type="PackedScene" uid="uid://ux1lgkuk6mvl" path="res://SoundManager/volume_settings.tscn" id="2_qt66y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xopl2"]
bg_color = Color(0, 0, 0, 0.780392)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_0yatn"]
font_size = 32

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hntvv")

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
focus_mode = 0
text = "Pause
"

[node name="PauseMenu" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PopupPanel" type="Panel" parent="PauseMenu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xopl2")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_0yatn")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="Reset" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "reset"

[node name="Home" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "menu"

[node name="VolumeSettings" parent="PauseMenu/VBoxContainer" instance=ExtResource("2_qt66y")]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
